fix(workflow-editor): Align multiline attributes and add separate btn-groups for workflow button separation

--- a/src/app/workflow-editor/graph-editor/graph-editor/workflow-graph-editor.component.scss
+++ b/src/app/workflow-editor/graph-editor/graph-editor/workflow-graph-editor.component.scss
@@ -10,15 +10,11 @@ svg.cwl-workflow {
 
 }
 
-.svg-btns.btn-group {
+.svg-btns {
     bottom: 30px;
     float: right;
     position: relative;
     right: 10px;
-
-    >.btn:nth-of-type(4), >.btn:nth-of-type(5) {
-        margin-left: 7px;
-    }
 }
 
 .svg-graph-empty-state {
